# Orbit

./: .gitignore  .gitmodules  CMakeLists.txt
data-ram/: res.xml
src/: game.cpp  game.h  main.cpp
src/Actors/: Anchor.cpp  Anchor.h  Body.cpp  Body.h  GlobalState.cpp  GlobalState.h  Planet.cpp  Planet.h  Player.cpp  Player.h  Rocket.cpp  Rocket.h  Space.cpp  Space.h  Way.cpp  Way.h  WayNVG.cpp  WayNVG.h
src/Helpers/: Format.cpp  Format.h  types.cpp  types.h
